--- a/mystyle02.css
+++ b/mystyle02.css
@@ -101,9 +101,42 @@ a.main:hover {
 
 
 
- 
-.images {
-    margin-left: 20%;
-    margin-right: 20%;
-    color: red;
+ #glass{
+    left: 0px;
+    right: 0px;
+    width: 100%;
 }
+
+#sugar{
+    left: 0px;
+    right: 0px;
+    width: 100%;
+}
+
+#mm{
+    left: 0px;
+    right: 0px;
+    width: 100%;
+}
+
+.flex-container {
+        display: flex;
+        flex-wrap: wrap;
+  }
+  
+
+  .test {
+    max-height: 100%;
+    max-width: 100%;
+    width: 25%;
+     }
+  
+
+   
+.desc {
+        padding: 10px;
+        text-align:left;
+        font-family:bahnschrift;
+      }
+      
+      
